--- a/ATM/ATM/ATM.csproj
+++ b/ATM/ATM/ATM.csproj
@@ -169,6 +169,7 @@
       <DependentUpon>ATM_DB.edmx</DependentUpon>
       <LastGenOutput>ATM_DB.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="ATM_DB.edmx.sql" />
     <Content Include="ATM_DB.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ATM_DB.edmx</DependentUpon>
@@ -216,16 +217,16 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Users\Create.cshtml" />
-    <Content Include="Views\Users\Delete.cshtml" />
-    <Content Include="Views\Users\Details.cshtml" />
-    <Content Include="Views\Users\Edit.cshtml" />
-    <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Accounts\Create.cshtml" />
     <Content Include="Views\Accounts\Delete.cshtml" />
     <Content Include="Views\Accounts\Details.cshtml" />
     <Content Include="Views\Accounts\Edit.cshtml" />
     <Content Include="Views\Accounts\Index.cshtml" />
+    <Content Include="Views\Users\Create.cshtml" />
+    <Content Include="Views\Users\Delete.cshtml" />
+    <Content Include="Views\Users\Details.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
