--- a/ATM/ATM/Web.config
+++ b/ATM/ATM/Web.config
@@ -69,6 +69,7 @@
   <connectionStrings>
     <add name="ATM_DBEntities" connectionString="metadata=res://*/ATM_Model.csdl|res://*/ATM_Model.ssdl|res://*/ATM_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ATM_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ATM_DBEntities1" connectionString="metadata=res://*/ATM_DB.csdl|res://*/ATM_DB.ssdl|res://*/ATM_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ATM_DB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ATM_DBEntities2" connectionString="metadata=res://*/ATM_DB.csdl|res://*/ATM_DB.ssdl|res://*/ATM_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ATM_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
