login required to view account details

--- a/ATM/ATM/ATM.csproj
+++ b/ATM/ATM/ATM.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\loginController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -227,6 +228,11 @@
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\login\Create.cshtml" />
+    <Content Include="Views\login\Delete.cshtml" />
+    <Content Include="Views\login\Details.cshtml" />
+    <Content Include="Views\login\Edit.cshtml" />
+    <Content Include="Views\login\login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
